pom.xml: upgrade Guava and set jdk18 profile as default
Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>