@@ -89,8 +89,7 @@
     <properties>
         <async-http-client.version>1.9.40</async-http-client.version>
         <ehcache.version>3.3.1</ehcache.version>
-        <!-- Release 21.0 requires JDK 1.8 or newer -->
-        <guava.version>20.0</guava.version>
+        <guava.version>26.0-jre</guava.version>
         <guice.version>4.1.0</guice.version>
         <!-- Release 2.7 requires JDK 1.7 or newer -->
         <jackson.version>2.6.7</jackson.version>
@@ -1405,6 +1404,13 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.0</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                        <showDeprecation>true</showDeprecation>
+                        <showWarnings>true</showWarnings>
+                        <fork>true</fork>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -1439,7 +1445,7 @@
                                         <version>3.0.0</version>
                                     </requireMavenVersion>
                                     <requireJavaVersion>
-                                        <version>1.6</version>
+                                        <version>1.8</version>
                                     </requireJavaVersion>
                                     <bannedDependencies>
                                         <excludes>
@@ -1497,7 +1503,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.13</version>
                     <configuration>
-                        <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m -XX:MaxDirectMemorySize=512m</argLine>
+                        <argLine>-Xms512m -Xmx1024m -XX:MaxDirectMemorySize=512m</argLine>
                         <useManifestOnlyJar>false</useManifestOnlyJar>
                         <systemPropertyVariables>
                             <file.encoding>UTF-8</file.encoding>
@@ -2046,6 +2052,10 @@
                         <artifactId>maven-dependency-versions-check-plugin</artifactId>
                     </plugin>
                     <plugin>
+                        <groupId>com.ning.maven.plugins</groupId>
+                        <artifactId>maven-duplicate-finder-plugin</artifactId>
+                    </plugin>
+                    <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-dependency-plugin</artifactId>
                     </plugin>
@@ -2067,12 +2077,6 @@
                             </systemPropertyVariables>
                         </configuration>
                     </plugin>
-                    <!-- Comment out the plugin for now. Logs are getting too big on Travis which fails the build,
-                         see for example https://api.travis-ci.org/jobs/5172875/log.txt?deansi=true -->
-                    <!--<plugin>-->
-                    <!--<groupId>com.ning.maven.plugins</groupId>-->
-                    <!--<artifactId>maven-duplicate-finder-plugin</artifactId>-->
-                    <!--</plugin>-->
                     <plugin>
                         <groupId>org.apache.rat</groupId>
                         <artifactId>apache-rat-plugin</artifactId>
@@ -2104,6 +2108,10 @@
                         <artifactId>maven-dependency-versions-check-plugin</artifactId>
                     </plugin>
                     <plugin>
+                        <groupId>com.ning.maven.plugins</groupId>
+                        <artifactId>maven-duplicate-finder-plugin</artifactId>
+                    </plugin>
+                    <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-dependency-plugin</artifactId>
                     </plugin>
@@ -2125,12 +2133,6 @@
                             </systemPropertyVariables>
                         </configuration>
                     </plugin>
-                    <!-- Comment out the plugin for now. Logs are getting too big on Travis which fails the build,
-                         see for example https://api.travis-ci.org/jobs/5172875/log.txt?deansi=true -->
-                    <!--<plugin>-->
-                    <!--<groupId>com.ning.maven.plugins</groupId>-->
-                    <!--<artifactId>maven-duplicate-finder-plugin</artifactId>-->
-                    <!--</plugin>-->
                     <plugin>
                         <groupId>org.apache.rat</groupId>
                         <artifactId>apache-rat-plugin</artifactId>
@@ -2219,9 +2221,6 @@
         </profile>
         <profile>
             <id>jdk16</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
             <build>
                 <plugins>
                     <plugin>
@@ -2233,6 +2232,24 @@
                             <showDeprecation>true</showDeprecation>
                             <showWarnings>true</showWarnings>
                             <fork>true</fork>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>jar</goal>
+                                    <goal>test-jar</goal>
+                                </goals>
+                                <configuration>
+                                    <classifier>jdk16</classifier>
+                                </configuration>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <skipIfEmpty>true</skipIfEmpty>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -2276,6 +2293,9 @@
         </profile>
         <profile>
             <id>jdk18</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <build>
                 <plugins>
                     <plugin>
@@ -2287,24 +2307,6 @@
                             <showDeprecation>true</showDeprecation>
                             <showWarnings>true</showWarnings>
                             <fork>true</fork>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-jar-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>jar</goal>
-                                    <goal>test-jar</goal>
-                                </goals>
-                                <configuration>
-                                    <classifier>jdk18</classifier>
-                                </configuration>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <skipIfEmpty>true</skipIfEmpty>
                         </configuration>
                     </plugin>
                 </plugins>
